--- a/YAZLAB2/Views/Etkinlik/Edit.cshtml
+++ b/YAZLAB2/Views/Etkinlik/Edit.cshtml
@@ -46,17 +46,37 @@
         <input type="text" class="form-control" id="Konum" name="Konum" value="@Model.Konum" required />
     </div>
 
-    <div class="form-group">
-        <label for="KategoriId">Kategori</label>
-        <select class="form-control" id="KategoriId" name="KategoriId" required>
-            <option value="">Kategori Seçin</option>
-            @foreach (var kategori in (List<YAZLAB2.Models.Kategori>)ViewData["Kategoriler"])
+   <div class="form-group">
+    <label>Kategoriler</label>
+    <div>
+        @if (ViewData["Kategoriler"] is List<YAZLAB2.Models.Kategori> kategoriler)
+        {
+            foreach (var kategori in kategoriler)
             {
-                <option value="@kategori.KategoriId" )>
-                    @kategori.KategoriAdi
-                </option>
+                <div class="form-check">
+                    <input type="checkbox" 
+                           class="form-check-input kategori-checkbox" 
+                           id="kategori_@kategori.KategoriId" 
+                           name="KategoriId" 
+                           value="@kategori.KategoriId" 
+                           @(kategori.KategoriId == Model.KategoriId ? "checked" : "") />
+                    <label class="form-check-label" for="kategori_@kategori.KategoriId">
+                        @kategori.KategoriAdi
+                    </label>
+                </div>
             }
-        </select>
+        }
+        else
+        {
+            <p>Kategoriler bulunamadı.</p>
+        }
+    </div>
+</div>
+
+
+    <div class="form-group">
+        <label for="EtkinlikResmi">Etkinlik Resmi URL</label>
+        <input type="url" class="form-control" id="EtkinlikResmi" name="EtkinlikResmi" value="@Model.EtkinlikResmi" />
     </div>
 
     <!-- Onay Durumu -->
